--- a/RawBencher/packages.config
+++ b/RawBencher/packages.config
@@ -3,4 +3,9 @@
   <package id="EntityFramework" version="6.0.1" targetFramework="net45" />
   <package id="Iesi.Collections" version="3.2.0.4000" targetFramework="net45" />
   <package id="NHibernate" version="3.3.3.4001" targetFramework="net45" />
+  <package id="ServiceStack.Common" version="4.0.3" targetFramework="net451" />
+  <package id="ServiceStack.Interfaces" version="4.0.3" targetFramework="net451" />
+  <package id="ServiceStack.OrmLite" version="4.0.3" targetFramework="net451" />
+  <package id="ServiceStack.OrmLite.SqlServer" version="4.0.3" targetFramework="net451" />
+  <package id="ServiceStack.Text" version="4.0.3" targetFramework="net451" />
 </packages>
