sln, project, project reference updates

--- a/RawBencher/RawBencher.csproj
+++ b/RawBencher/RawBencher.csproj
@@ -123,6 +123,10 @@
       <Project>{3e9ca88c-03ec-445a-960a-242511b6ef55}</Project>
       <Name>NH.Bencher.Persistence</Name>
     </ProjectReference>
+    <ProjectReference Include="..\OakDynamicDb.Bencher\OakDynamicDb.Bencher.csproj">
+      <Project>{106ced47-76bc-477e-9fff-3e6042f874eb}</Project>
+      <Name>OakDynamicDb.Bencher</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
