Much refactoring and changes
- Refactored bench code in individual classes so it's easier to add new
ones
- Added individual fetch benchmark for all frameworks currently
supported (refs #8)
- Broke the averaging, that's currently not working (results aren't
gathered)
- Added a timing for the enumeration of the complete set (during
validation) (refs #7)

--- a/RawBencher/RawBencher.csproj
+++ b/RawBencher/RawBencher.csproj
@@ -82,6 +82,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Benchers\BencherBase.cs" />
+    <Compile Include="Benchers\IBencher.cs" />
+    <Compile Include="Benchers\OakDynamicDbNormalBencher.cs" />
+    <Compile Include="Benchers\OrmLiteBencher.cs" />
+    <Compile Include="Benchers\NHibernateNormalBencher.cs" />
+    <Compile Include="Benchers\LinqToSqlNoChangeTrackingBencher.cs" />
+    <Compile Include="Benchers\LinqToSqlNormalBencher.cs" />
+    <Compile Include="Benchers\EntityFrameworkNoChangeTrackingBencher.cs" />
+    <Compile Include="Benchers\EntityFrameworkNormalBencher.cs" />
+    <Compile Include="Benchers\DapperBencher.cs" />
+    <Compile Include="Benchers\DataTableBencher.cs" />
+    <Compile Include="Benchers\HandCodedBencher.cs" />
+    <Compile Include="Benchers\LLBLGenProResultsetCachingBencher.cs" />
+    <Compile Include="Benchers\LLBLGenProNoChangeTrackingBencher.cs" />
+    <Compile Include="Benchers\LLBLGenProNormalBencher.cs" />
+    <Compile Include="BenchResult.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
