Work for refs #6, cleaning up connection strings, updated frameworks
- Entity Framework is now updated to 6.0.2 RTM
- OrmLite is now updated to 4.0.5
- Connection strings are now cleaned up, there are now just 2 (one for
EF and one for the rest)
- Catalog name overwriting is now added (commented out) for LLBLGen Pro

--- a/L2S/DAL/App.config
+++ b/L2S/DAL/App.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0"?>
 <configuration>
 	<appSettings>
-		<add key="L2SConnectionString.SQL Server (SqlClient)" value="data source=zeusVM\SQLSERVER2005;initial catalog=master;integrated security=SSPI;persist security info=False;packet size=4096"/>
+		<add key="AdventureWorks.ConnectionString.SQL Server (SqlClient)" value="data source=zeusVM\SQLSERVER2005;initial catalog=master;integrated security=SSPI;persist security info=False;packet size=4096"/>
 	</appSettings>
 </configuration>
