--- a/NH/DAL/Persistence/app.config
+++ b/NH/DAL/Persistence/app.config
@@ -2,6 +2,6 @@
 <configuration>
 	<connectionStrings>
 		<!-- please adjust the connection string embedded in the element below to target the proper catalog / server using the proper user / password combination -->
-		<add name="NHConnectionString.SQL Server (SqlClient)" connectionString="data source=win2008sql2012;initial catalog=AdventureWorks;integrated security=SSPI;persist security info=False;packet size=4096" />
+		<add name="AdventureWorks.ConnectionString.SQL Server (SqlClient)" connectionString="data source=win2008sql2012;initial catalog=AdventureWorks;integrated security=SSPI;persist security info=False;packet size=4096" />
 	</connectionStrings>
 </configuration> 
