Rewrote handoptimized materializer, added raw bencher using object arrays

--- a/RawBencher/RawBencher.csproj
+++ b/RawBencher/RawBencher.csproj
@@ -87,6 +87,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Benchers\BencherBase.cs" />
+    <Compile Include="Benchers\RawDbDataReaderBencher.cs" />
     <Compile Include="Benchers\IBencher.cs" />
     <Compile Include="Benchers\OakDynamicDbNormalBencher.cs" />
     <Compile Include="Benchers\OrmLiteBencher.cs" />
