--- a/RawBencher/RawBencher.csproj
+++ b/RawBencher/RawBencher.csproj
@@ -87,6 +87,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Benchers\BencherBase.cs" />
+    <Compile Include="Benchers\PetaPocoFastBencher.cs" />
     <Compile Include="Benchers\RawDbDataReaderBencher.cs" />
     <Compile Include="Benchers\IBencher.cs" />
     <Compile Include="Benchers\OakDynamicDbNormalBencher.cs" />
@@ -103,6 +104,8 @@
     <Compile Include="Benchers\LLBLGenProNoChangeTrackingBencher.cs" />
     <Compile Include="Benchers\LLBLGenProNormalBencher.cs" />
     <Compile Include="BenchResult.cs" />
+    <Compile Include="Benchers\PetaPocoBencher.cs" />
+    <Compile Include="PetaPoco.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
