Added 2nd Oak bencher, Added average calculation and display, Name caching
Thanks to Amir Rajan (oak bencher) and Jonny Bekkum (averaging code) for
code used in this commit.

--- a/RawBencher/RawBencher.csproj
+++ b/RawBencher/RawBencher.csproj
@@ -86,7 +86,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BencherResult.cs" />
     <Compile Include="Benchers\BencherBase.cs" />
+    <Compile Include="Benchers\OakDynamicDbDtoBencher.cs" />
     <Compile Include="Benchers\PetaPocoFastBencher.cs" />
     <Compile Include="Benchers\RawDbDataReaderBencher.cs" />
     <Compile Include="Benchers\IBencher.cs" />
