Updated Program and PetaPoco tests

--- a/RawBencher/App.config
+++ b/RawBencher/App.config
@@ -17,8 +17,8 @@
 	<connectionStrings>
 		<!-- please adjust the connection string embedded in the element below to target the proper catalog / server using the proper user / password combination -->
 		<!-- If you use a differently named adventure works database, be sure to change the initial catalog descriptions in the connection strings below.-->
-		<add name="AdventureWorks.ConnectionString.SQL Server (SqlClient)" connectionString="data source=WIN2008SQL2012\SQLEXPRESS;initial catalog=AdventureWorks;integrated security=SSPI;persist security info=False;packet size=4096" />
-		<add name="EF.ConnectionString.SQL Server (SqlClient)" connectionString="metadata=res://*/AW.csdl|res://*/AW.ssdl|res://*/AW.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=WIN2008SQL2012\SQLEXPRESS;initial catalog=AdventureWorks;integrated security=SSPI;persist security info=False;packet size=4096&quot;" providerName="System.Data.EntityClient" />
+		<add name="AdventureWorks.ConnectionString.SQL Server (SqlClient)" connectionString="data source=(LocalDB)\v11.0;initial catalog=AdventureWorks;integrated security=SSPI;persist security info=False;packet size=4096" />
+		<add name="EF.ConnectionString.SQL Server (SqlClient)" connectionString="metadata=res://*/AW.csdl|res://*/AW.ssdl|res://*/AW.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;initial catalog=AdventureWorks;integrated security=SSPI;persist security info=False;packet size=4096&quot;" providerName="System.Data.EntityClient" />
 	</connectionStrings>
 	<entityFramework>
 		<defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
