--- a/RawBencher/packages.config
+++ b/RawBencher/packages.config
@@ -1,8 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.0.2" targetFramework="net451" />
+  <package id="EntityLite.Core" version="1.0.10-Beta" targetFramework="net451" />
   <package id="Iesi.Collections" version="3.2.0.4000" targetFramework="net45" />
+  <package id="Microsoft.SqlServer.Types" version="10.50.1600.1" targetFramework="net451" />
   <package id="NHibernate" version="3.3.3.4001" targetFramework="net45" />
+  <package id="NLog" version="2.1.0" targetFramework="net451" />
   <package id="ServiceStack.Common" version="4.0.5" targetFramework="net451" />
   <package id="ServiceStack.Interfaces" version="4.0.5" targetFramework="net451" />
   <package id="ServiceStack.OrmLite" version="4.0.5" targetFramework="net451" />
