--- a/RawBencher/packages.config
+++ b/RawBencher/packages.config
@@ -1,11 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EntityFramework" version="6.0.2" targetFramework="net451" />
-  <package id="Iesi.Collections" version="3.2.0.4000" targetFramework="net45" />
-  <package id="NHibernate" version="3.3.3.4001" targetFramework="net45" />
-  <package id="ServiceStack.Common" version="4.0.5" targetFramework="net451" />
-  <package id="ServiceStack.Interfaces" version="4.0.5" targetFramework="net451" />
-  <package id="ServiceStack.OrmLite" version="4.0.5" targetFramework="net451" />
-  <package id="ServiceStack.OrmLite.SqlServer" version="4.0.5" targetFramework="net451" />
-  <package id="ServiceStack.Text" version="4.0.5" targetFramework="net451" />
+  <package id="CommandLineParser" version="1.9.71" targetFramework="net451" />
+  <package id="EntityFramework" version="6.1.0-alpha1" targetFramework="net451" />
+  <package id="Iesi.Collections" version="4.0.1.4000" targetFramework="net451" />
+  <package id="NHibernate" version="4.0.0-Alpha1" targetFramework="net451" />
+  <package id="ServiceStack.Common" version="4.0.8" targetFramework="net451" />
+  <package id="ServiceStack.Interfaces" version="4.0.8" targetFramework="net451" />
+  <package id="ServiceStack.OrmLite" version="4.0.8" targetFramework="net451" />
+  <package id="ServiceStack.OrmLite.SqlServer" version="4.0.8" targetFramework="net451" />
+  <package id="ServiceStack.Text" version="4.0.8" targetFramework="net451" />
+  <package id="Telerik.DataAccess.Core" version="2013.3.1320.1" targetFramework="net451" />
+  <package id="Telerik.DataAccess.Fluent" version="2013.3.1320.1" targetFramework="net451" />
 </packages>
