--- a/RawBencher/packages.config
+++ b/RawBencher/packages.config
@@ -9,6 +9,6 @@
   <package id="ServiceStack.OrmLite" version="4.0.8" targetFramework="net451" />
   <package id="ServiceStack.OrmLite.SqlServer" version="4.0.8" targetFramework="net451" />
   <package id="ServiceStack.Text" version="4.0.8" targetFramework="net451" />
-  <package id="Telerik.DataAccess.Core" version="2013.3.1320.1" targetFramework="net451" />
-  <package id="Telerik.DataAccess.Fluent" version="2013.3.1320.1" targetFramework="net451" />
+  <!--<package id="Telerik.DataAccess.Core" version="2013.3.1320.1" targetFramework="net451" />
+  <package id="Telerik.DataAccess.Fluent" version="2013.3.1320.1" targetFramework="net451" />-->
 </packages>
