Updated to not require NuGet packages for Telerik

--- a/TDA.Bencher/TDA.Bencher.csproj
+++ b/TDA.Bencher/TDA.Bencher.csproj
@@ -11,7 +11,7 @@
     <AssemblyName>TDA.Bencher</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <EnhancerAssembly>$(SolutionDir)\packages\Telerik.DataAccess.Fluent.2013.3.1320.1\tools\enhancer\enhancer.exe</EnhancerAssembly>
+    <EnhancerAssembly>C:\Program Files (x86)\Telerik\Data Access\sdk\enhancer.exe</EnhancerAssembly>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
