--- a/RawBencher/packages.config
+++ b/RawBencher/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommandLineParser" version="1.9.71" targetFramework="net451" />
-  <package id="EntityFramework" version="6.1.0-alpha1" targetFramework="net451" />
+  <package id="EntityFramework" version="6.0.2" targetFramework="net451" />
   <package id="Iesi.Collections" version="4.0.1.4000" targetFramework="net451" />
   <package id="NHibernate" version="4.0.0-Alpha1" targetFramework="net451" />
   <package id="ServiceStack.Common" version="4.0.8" targetFramework="net451" />
@@ -9,6 +9,5 @@
   <package id="ServiceStack.OrmLite" version="4.0.8" targetFramework="net451" />
   <package id="ServiceStack.OrmLite.SqlServer" version="4.0.8" targetFramework="net451" />
   <package id="ServiceStack.Text" version="4.0.8" targetFramework="net451" />
-  <!--<package id="Telerik.DataAccess.Core" version="2013.3.1320.1" targetFramework="net451" />
-  <package id="Telerik.DataAccess.Fluent" version="2013.3.1320.1" targetFramework="net451" />-->
+  <package id="Telerik.DataAccess.Core" version="2013.3.1320.1" targetFramework="net451" />
 </packages>
