Revert "Removed binary files from project"
This reverts commit e8e8b9cffbe1a9bc2bb28f2f7f75c373de72f2a3.

--- a/Telerik/Telerik.Bencher.Model.csproj
+++ b/Telerik/Telerik.Bencher.Model.csproj
@@ -80,6 +80,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="README.txt" />
+    <Content Include="SqlServerTypes\x64\SqlServerSpatial110.dll" />
+    <Content Include="SqlServerTypes\x86\SqlServerSpatial110.dll" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
