Added benchers for Telerik DataAccess woth Domain and Fluent API

--- a/RawBencher/packages.config
+++ b/RawBencher/packages.config
@@ -8,4 +8,5 @@
   <package id="ServiceStack.OrmLite" version="4.0.5" targetFramework="net451" />
   <package id="ServiceStack.OrmLite.SqlServer" version="4.0.5" targetFramework="net451" />
   <package id="ServiceStack.Text" version="4.0.5" targetFramework="net451" />
+  <package id="Telerik.DataAccess.Core" version="2013.3.1320.1" targetFramework="net451" />
 </packages>
