--- a/NH/DAL/Persistence/NH.Bencher.Persistence.csproj
+++ b/NH/DAL/Persistence/NH.Bencher.Persistence.csproj
@@ -188,6 +188,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="EntityMappings\SalesOrderHeader.hbm.xml">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="EntityMappings\SalesOrderHeaderSalesReason.hbm.xml">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
