--- a/Telerik/OpenAccessNuGet.targets
+++ b/Telerik/OpenAccessNuGet.targets
@@ -19,7 +19,7 @@ Copyright (C) 2007-2014 Telerik AD. All rights reserved.
   <!-- Default values of the Project Settings used in the enhancement process -->
   <PropertyGroup>
     <UseXmlMapping Condition="'$(UseXmlMapping)'==''">true</UseXmlMapping>
-    <UseAttributeMapping Condition="'$(UseAttributeMapping)'==''">true</UseAttributeMapping>
+    <UseAttributeMapping Condition="'$(UseAttributeMapping)'==''">false</UseAttributeMapping>
     <UseFluentMapping Condition="'$(UseFluentMapping)'==''">true</UseFluentMapping>
     <EnhancerAssembly Condition="'$(EnhancerAssembly)'==''">enhancer.exe</EnhancerAssembly>
     <EnhancerVerboseMode Condition="'$(EnhancerVerboseMode)'==''">3</EnhancerVerboseMode>
