Added Marr DataMapper Bencher

--- a/RawBencher/packages.config
+++ b/RawBencher/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="EntityFramework" version="6.1.0" targetFramework="net451" />
   <package id="Iesi.Collections" version="3.2.0.4000" targetFramework="net45" />
+  <package id="MarrDataMapper" version="3.34" targetFramework="net451" />
   <package id="NHibernate" version="3.3.3.4001" targetFramework="net45" />
   <package id="ServiceStack.Common" version="4.0.18" targetFramework="net451" />
   <package id="ServiceStack.Interfaces" version="4.0.18" targetFramework="net451" />
