--- a/RawBencher/packages.config
+++ b/RawBencher/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Dapper" version="1.42" targetFramework="net451" />
   <package id="EntityFramework" version="6.1.2" targetFramework="net451" />
   <package id="Iesi.Collections" version="3.2.0.4000" targetFramework="net45" />
   <package id="NHibernate" version="3.3.3.4001" targetFramework="net45" />
