Add a DNX project with minimal coverage (raw, hand-coded, dapper) to serve as a starter for core-clr additions

--- a/RawBencher/App.config
+++ b/RawBencher/App.config
@@ -25,6 +25,8 @@
 			 The extra connection string for telerik Fluent is required as the OpenAccess runtime used in the other telerik bencher caches metadata 
 			 related to the connection string so the fluent one will crash if it doesn't use its own connection string. 
 		-->
+
+    <!-- note: for CoreCLR the connection string is currently hard coded in the app-code; see Program.cs for reasons -->
 		<add name="AdventureWorksConnectionTelerikFluent" connectionString="data source=nerd.sd.local;initial catalog=AdventureWorks;integrated security=SSPI;persist security info=False;packet size=4096" providerName="System.Data.SqlClient" />
 		<add name="AdventureWorks.ConnectionString.SQL Server (SqlClient)" connectionString="data source=nerd.sd.local;initial catalog=AdventureWorks;integrated security=SSPI;persist security info=False;packet size=4096" providerName="System.Data.SqlClient" />
 		<add name="EF.ConnectionString.SQL Server (SqlClient)" connectionString="metadata=res://*/AW.csdl|res://*/AW.ssdl|res://*/AW.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=nerd.sd.local;initial catalog=AdventureWorks;integrated security=SSPI;persist security info=False;packet size=4096&quot;" providerName="System.Data.EntityClient" />
